--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "pdf",
+    "name": "pdf-editor",
     "builds": [
        { "src": "./index.js", "use": "@vercel/node" }
     ],
