--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jszip": "^3.10.1",
     "libreoffice-convert": "^1.4.1",
     "mammoth": "^1.6.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.0",
     "officegen": "^0.6.5",
     "pdf-image": "^2.0.0",
     "pdf-img-convert-web": "^1.2.4",
