--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Umang Patel",
   "license": "ISC",
   "dependencies": {
-    "@pdf-lib/fontkit": "^1.1.1",
+       "@pdf-lib/fontkit": "^1.1.1",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -19,11 +19,11 @@
     "excel4node": "^1.8.2",
     "express": "^4.18.2",
     "imagemin": "^8.0.1",
-    "jimp": "^0.22.9",
+    "jimp": "^0.22.7",
     "jszip": "^3.10.1",
     "libreoffice-convert": "^1.4.1",
     "mammoth": "^1.6.0",
-    "multer": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "officegen": "^0.6.5",
     "pdf-image": "^2.0.0",
     "pdf-img-convert-web": "^1.2.4",
